fixed up alignment on about and home

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -115,7 +115,7 @@
 }
 
 .HomePage {
-  display: block;
+  display: flex;
   justify-content: center;
 }
 
@@ -130,7 +130,13 @@
 }
 
 .ContentBody {
-  text-align: center;
+  text-align: left;
+}
+
+.imageContainer {
+  display: block;
+  width: auto;
+  margin: auto;
 }
 
 .homecopy {
@@ -138,7 +144,7 @@
   display: flex;
   flex-direction: column;
   max-width: 600px;
-  text-align: center;
+  text-align: left;
 }
 
 .hometext {
