--- a/styles/global.scss
+++ b/styles/global.scss
@@ -20,8 +20,8 @@ body {
   min-height: inherit; 
   margin: 0; 
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Helvetica, Arial, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, 'Helvetica Neue', sans-serif;
 } 
 
 @media only screen and (max-width: 576px) {
